Added whiskey routes
