# routes/distilleryRoutes.js
@@ -1,7 +1,8 @@
 'use strict';
 
 module.exports = function(app) {
-  var distilleryList = require('../controllers/distilleryController');
+  var distilleryList = require('../controllers/distilleryController'),
+  var whiskeyList = require('../controllers/whiskeyController');
 
   app.route('/distilleries')
     .get(distilleryList.list_all_distilleries)
@@ -11,4 +12,7 @@ module.exports = function(app) {
     .get(distilleryList.read_a_distillery)
     .put(distilleryList.update_a_distillery)
     .delete(distilleryList.delete_a_distillery);
+
+  app.route('/distilleries/:distilleryId/whiskeys')
+    .get(whiskeyList.list_all_whiskeys_for_distillery);
 };
